fixed visibile navbar isssue

--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -312,7 +312,7 @@ h1, h2, h3, h4, h5, h6 {
 	background: #f5f5f5;
 	width: 0;
 	position: absolute;
-	right: 0;
+	right: -150px;
 	height: 100%;
 	-webkit-transition: .3s ease-in-out;
 	-o-transition: .3s ease-in-out;
